# sgxfuzz

./: .gitignore  .gitmodules  Dockerfile  README.md  analyze_crashes.py  calculate-coverage.sh  display-struct.sh  display-structs.py  initialize-target.sh  run-example.sh  setup.sh  struct_recovery.py
Enclaves/SimpleFuzzTest/: Makefile  enclave.signed.so.layout  enclave.signed.so.mem  enclave.signed.so.mem.zst  enclave.signed.so.tcs.txt
Enclaves/SimpleFuzzTest/App/: App.cpp  App.h  sgxerrorprinting.cpp
Enclaves/SimpleFuzzTest/Enclave/: Enclave.cpp  Enclave.edl  Enclave.h
enclave-dumper/: DumpReader.py  Makefile  extract.sh  linux-sgx-sign.patch
enclave-dumper-win/: sgx_sign_gdb.py
kafl/kAFL-Fuzzer/: kafl_cov.py  kafl_fuzz.py  kafl_gui.py  kafl_plot.py  kafl_user_prepare.py  proc_map_helper.py
kafl/kAFL-Fuzzer/common/: config.py  execution_result.py  (+6 more)
kafl/patches.old/: 0001-fail-of-frontend-did-not-create-SHM-backing-files-of.patch  0001-linux-kvm-starved.patch  0002-qemu_starved_and_other.patch  auto_dict.patch
kafl/targets.old/: kafl_user.h
kafl/tools/: display-structs.py
native-sgx-runner/: CMakeLists.txt  InputMutator.cpp  InputMutator.h  InputNode.hpp  NativeEnclave.cpp  NativeEnclave.h  kafl_user.h  libnyx.c  libnyx.h  main-generic.cpp  make-enclave-fuzz-target.sh  sgx_types.h
native-sgx-runner/buffer/: Buffer.h  GuardedBuffer.cpp  GuardedBuffer.h  InEnclaveBuffer.h  PartialEnclaveBuffer.h
packer/agents/: kafl_user.h  nyx.h
packer/linux_initramfs/: pack.sh
packer/packer/: .gitignore  nyx.ini  nyx_config_gen.py  nyx_packer.py
seeds/: abc
(+65 files in other folders)
